force-app/main/default/objects/InternalRequest__c/InternalRequest__c.object-meta.xml
<CustomObject>
    <label>社内稟議</label>
    <nameField>
        <label>社内稟議名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>