force-app/main/default/objects/InternalRequest__c/fields/AdvisorApproval__c.field-meta.xml
<CustomField>
    <fullName>AdvisorApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>顧問承認</label>
    <type>Checkbox</type>
</CustomField>