force-app/main/default/objects/InternalRequest__c/fields/AdvisorApprovalDateTime__c.field-meta.xml
<CustomField>
    <fullName>AdvisorApprovalDateTime__c</fullName>
    <label>顧問承認日時</label>
    <type>DateTime</type>
</CustomField>