force-app/main/default/objects/InternalRequest__c/fields/AdvisorApprovalUser__c.field-meta.xml
<CustomField>
    <fullName>AdvisorApprovalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者：顧問</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InternalRequestAdvisorList</relationshipName>
    <type>Lookup</type>
</CustomField>