force-app/main/default/objects/InternalRequest__c/fields/AssistantManagerApproval__c.field-meta.xml
<CustomField>
    <fullName>AssistantManagerApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>係長承認</label>
    <type>Checkbox</type>
</CustomField>