force-app/main/default/objects/InternalRequest__c/fields/AssistantManagerApprovalDateTime__c.field-meta.xml
<CustomField>
    <fullName>AssistantManagerApprovalDateTime__c</fullName>
    <label>係長承認日時</label>
    <type>DateTime</type>
</CustomField>