force-app/main/default/objects/InternalRequest__c/fields/AssistantManagerApprovalUser__c.field-meta.xml
<CustomField>
    <fullName>AssistantManagerApprovalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者：係長</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InternalRequestAssistantManagerList</relationshipName>
    <type>Lookup</type>
</CustomField>