force-app/main/default/objects/InternalRequest__c/fields/DirectorApproval__c.field-meta.xml
<CustomField>
    <fullName>DirectorApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>部長承認</label>
    <type>Checkbox</type>
</CustomField>