force-app/main/default/objects/InternalRequest__c/fields/DirectorApprovalDateTime__c.field-meta.xml
<CustomField>
    <fullName>DirectorApprovalDateTime__c</fullName>
    <label>部長承認日時</label>
    <type>DateTime</type>
</CustomField>