force-app/main/default/objects/InternalRequest__c/fields/DirectorApprovalUser__c.field-meta.xml
<CustomField>
    <fullName>DirectorApprovalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者：部長</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InternalRequestDirectorList</relationshipName>
    <type>Lookup</type>
</CustomField>