force-app/main/default/objects/InternalRequest__c/fields/ManagerApproval__c.field-meta.xml
<CustomField>
    <fullName>ManagerApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>課長承認</label>
    <type>Checkbox</type>
</CustomField>