force-app/main/default/objects/InternalRequest__c/fields/ManagerApprovalDateTime__c.field-meta.xml
<CustomField>
    <fullName>ManagerApprovalDateTime__c</fullName>
    <label>課長承認日時</label>
    <type>DateTime</type>
</CustomField>