force-app/main/default/objects/InternalRequest__c/fields/ManagerApprovalUser__c.field-meta.xml
<CustomField>
    <fullName>ManagerApprovalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者：課長</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InternalRequestManagerList</relationshipName>
    <type>Lookup</type>
</CustomField>