force-app/main/default/objects/InternalRequest__c/fields/SeniorStaffApproval__c.field-meta.xml
<CustomField>
    <fullName>SeniorStaffApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>主任承認</label>
    <type>Checkbox</type>
</CustomField>