force-app/main/default/objects/InternalRequest__c/fields/SeniorStaffApprovalDateTime__c.field-meta.xml
<CustomField>
    <fullName>SeniorStaffApprovalDateTime__c</fullName>
    <label>主任承認日時</label>
    <type>DateTime</type>
</CustomField>