force-app/main/default/objects/InternalRequest__c/fields/SeniorStaffApprovalUser__c.field-meta.xml
<CustomField>
    <fullName>SeniorStaffApprovalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者：主任</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InternalRequestSeniorStaffList</relationshipName>
    <type>Lookup</type>
</CustomField>