force-app/main/default/objects/InternalRequest__c/fields/StakeholderApproval__c.field-meta.xml
<CustomField>
    <fullName>StakeholderApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>関係者承認</label>
    <type>Checkbox</type>
</CustomField>