force-app/main/default/objects/InternalRequest__c/fields/StakeholderApprovalDateTime__c.field-meta.xml
<CustomField>
    <fullName>StakeholderApprovalDateTime__c</fullName>
    <label>関係者承認日時</label>
    <type>DateTime</type>
</CustomField>