force-app/main/default/objects/InternalRequest__c/fields/StakeholderApprovalUser__c.field-meta.xml
<CustomField>
    <fullName>StakeholderApprovalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者：関係者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InternalRequestStakeholderList</relationshipName>
    <type>Lookup</type>
</CustomField>